<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/blaugrana_wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/ellipse"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/brandName"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/brandName"
        android:textAlignment="center"
        android:textColor="@color/g_white"
        android:fontFamily="@font/fcbarcelona21"
        android:shadowColor="@color/black"
        android:shadowDx="4"
        android:shadowDy="6"
        android:shadowRadius="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop"
        />

    <TextView
        android:id="@+id/tvRightAddressForShopping"
        style="@style/h5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:lineSpacingExtra="-4dp"
        android:text="@string/rightAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEllipseRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop" />

    <TextView
        android:id="@+id/tvQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
        app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"
        app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/quality"
        android:layout_marginTop="20dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/StartButton"
        style="@style/gradientButtonStyle"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvQuality"

        app:layout_constraintStart_toStartOf="@id/tvQuality"
        app:layout_constraintTop_toBottomOf="@id/tvQuality"
         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

</androidx.constraintlayout.widget.ConstraintLayout>